# extract-ocr

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  extract-ocr.code-workspace  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
.github/instructions/: docs-export.instructions.md  python.instructions.md
.github/prompts/: endnote-export-full.prompt.md  endnote-export-smoke.prompt.md  pyuspto-fetch-latest.prompt.md  repo-doc-export-triage.prompt.md
docs/EndNote 25/: EndNote.txt  endnote25_windows_leftpanel.html
docs/USPTO ODP/seeds/: API - Address Attorney _ Open Data Portal.html  API - Application Data _ Open Data Portal.html  API - Assignments _ Open Data Portal.html  API - Associated Documents _ Open Data Portal.html  API - Continuity _ Open Data Portal.html  API - Documents _ Open Data Portal.html  API - Download Decisions Search Results _ Open Data Portal.html  API - Download Documents Search Results _ Open Data Portal.html  API - Download Proceedings Search Results _ Open Data Portal.html  API - Download Search Result _ Open Data Portal - PTAB Interferences.html  (+60 more)
docs/pyUSPTO/: fetch_latest_docs.py
scripts/: check_mcp_env.py  export_endnote25_windows.py  ingest_data_uspto_gov.py
src/extract_ocr/: __init__.py  apis_report.py  cache.py  citations.py  cli.py  content.py  crawl.py  export_inspect.py  http_client.py  manifest.py  robots.py  state.py  urls.py
vscode/global/: Apply-VSCodeProfileSettings.ps1  Reset-PythonPylanceWorkspaceState.ps1  settings.copilot.json
(+17 files in other folders)
